responsive section commit

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
+                <div class="nav-menu-icon">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
                 <div class="nav-btn">
                     <button class="nav-btn">
                         Login
@@ -29,9 +32,7 @@
 
             <div class="banner-section">
                 <div class="banner-content">
-                    <h1>Conmebol
-                        Copa America 
-                        2021
+                    <h1>Conmebol Copa America  2021
                         </h1>
                         <button class="banner-btn">
                             Watch Live
@@ -56,83 +57,114 @@
                 </div>
                 <div class="game-card">
                     <div class="card-image">
-                        <img src="./images/players/player-1.png" alt="">
+                        <img src="./images/players/player-2.png" alt="">
                     </div>
-                    <h1>Neymar Jr</h1>
+                    <h1>Lionel Messi</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
                 </div>
                 <div class="game-card">
                     <div class="card-image">
-                        <img src="./images/players/player-1.png" alt="">
+                        <img src="./images/players/player-3.png" alt="">
                     </div>
-                    <h1>Neymar Jr</h1>
+                    <h1>Cristiano Ronaldo</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
                 </div>
                 <div class="game-card">
                     <div class="card-image">
-                        <img src="./images/players/player-1.png" alt="">
+                        <img src="./images/players/player-4.png" alt="">
                     </div>
-                    <h1>Neymar Jr</h1>
+                    <h1>Paulo Dybala</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
                 </div>
                 <div class="game-card">
                     <div class="card-image">
-                        <img src="./images/players/player-1.png" alt="">
+                        <img src="./images/players/player-5.png" alt="">
                     </div>
-                    <h1>Neymar Jr</h1>
+                    <h1>Mesut Ozil </h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
                 </div>
                 <div class="game-card">
                     <div class="card-image">
-                        <img src="./images/players/player-1.png" alt="">
+                        <img src="./images/players/player-6.png" alt="">
                     </div>
-                    <h1>Neymar Jr</h1>
+                    <h1>Mauro Icardi </h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
                 </div>
                 <div class="game-card">
                     <div class="card-image">
-                        <img src="./images/players/player-1.png" alt="">
+                        <img src="./images/players/player-7.png" alt="">
                     </div>
-                    <h1>Neymar Jr</h1>
+                    <h1>Di Maria</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
                 </div>
                 <div class="game-card">
                     <div class="card-image">
-                        <img src="./images/players/player-1.png" alt="">
+                        <img src="./images/players/player-8.png" alt="">
                     </div>
-                    <h1>Neymar Jr</h1>
+                    <h1>Kylian Mbappé</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
                 </div>
                 <div class="game-card">
                     <div class="card-image">
-                        <img src="./images/players/player-1.png" alt="">
+                        <img src="./images/players/player-9.png" alt="">
                     </div>
-                    <h1>Neymar Jr</h1>
+                    <h1>Mohamed Salah</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
                 </div>
                 <div class="game-card">
                     <div class="card-image">
-                        <img src="./images/players/player-1.png" alt="">
+                        <img src="./images/players/player-10.png" alt="">
                     </div>
-                    <h1>Neymar Jr</h1>
+                    <h1>Harry Kane</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
                 </div>
                 <div class="game-card">
                     <div class="card-image">
-                        <img src="./images/players/player-1.png" alt="">
+                        <img src="./images/players/player-11.png" alt="">
                     </div>
-                    <h1>Neymar Jr</h1>
+                    <h1>Kevin De Bruyne</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
                 </div>
                 <div class="game-card">
                     <div class="card-image">
-                        <img src="./images/players/player-1.png" alt="">
+                        <img src="./images/players/player-12.png" alt="">
                     </div>
-                    <h1>Neymar Jr</h1>
+                    <h1>Philippe Coutinho</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+            </div>
+
+            <div class="highlights-section">
+                <div class="highlights-content">
+                    <h1>All Highlights <br>Copa America 2021</h1>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+
+                        <button class="banner-btn">Watch Now</button>
+                </div>
+                <div class="highlights-image">
+                    <img src="./images/match.png" alt="">
                 </div>
             </div>
         </section>
     </main>
+
+    <footer>
+        <section class="container">
+            <div class="footer-container">
+                <div class="footer-logo">
+                    <img src="./images/Logo.png" alt="">
+                </div>
+                <div class="footer-icon">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-dribbble"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                </div>
+                <p id="copy-title">Copyright &copy; 2022 Football</p>
+            </div>
+        </section>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/eb40ddef19.js" crossorigin="anonymous"></script>
 </body>
 </html>
